--- a/ex_11_formularioComSeletores/index.html
+++ b/ex_11_formularioComSeletores/index.html
@@ -10,7 +10,26 @@
         <p>Nome:</p><input type="text" name="nome"
         <br>
         <br>
+        <br>
         <input type="checkbox" name="termodeconscentimento" id="">Eu aceito os <a href="">termos</a>.
+        <br>
+        <br>
+        <input type="text" name="nome" value="Lauren">
+        <br>
+        <br>
+        <!-- placeholder deixa a sugestão de texto-->
+        <input type="text" name="endereco" placeholder="Digite aqui seu endereço">
+        <br><br>
+        <input type="text" name="escola" value="não alterável" readonly>
+        <br><br>
+        <input type="text" name="escola" value="Campo desabilitado" disabled>
+        <br><br>
+        <input type="text" name="ano" value="limitado" maxlength="4">
+        <br><br>
+        <input type="text" name="email" required>
+        <br><br>
+        <input type="submit" value="Enviar"
+    
     </form>
 </body>
 </html>
